[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gui/SegmentButton.gd" type="Script" id=2]

[node name="SegmentButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true
stretch_mode = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 20, 20 )
mouse_filter = 2
size_flags_horizontal = 7
size_flags_vertical = 7
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverTween" type="Tween" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SegmentButton_pressed"]
